included width to quantity selector on base.css as it was showing to big on Firefox, now limiting the width it shows correctly

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -316,6 +316,7 @@ footer {
 
 .qty_input {
     font-size: 1.2em;
+    width: 20%;
 }
 
 .decrement-qty {
